Fix AFfC Rules tooltip on mobile

--- a/agot-bg-game-server/src/client/style/custom.scss
+++ b/agot-bg-game-server/src/client/style/custom.scss
@@ -480,14 +480,6 @@ div.new-event {
   max-width: 100%;
 }
 
-.tooltip-w-50 > .tooltip-inner {
-  max-width: 50%;
-}
-
-.tooltip-w-30 > .tooltip-inner {
-  max-width: 30%;
-}
-
 .display-none {
   display: none;
 }
